removed unnecessary letter spacing hack, fixes firefo distribute issues

--- a/src/mixins.styl
+++ b/src/mixins.styl
@@ -11,11 +11,9 @@ micro-clearfix()
 
 fullheight-align(align)
   font-size 0
-  letter-spacing -1px
   &:before
   &:after
   & > *
-    letter-spacing normal
     font-size 1rem
   &:before
     content ''
